--- a/src/pages/Index.scss
+++ b/src/pages/Index.scss
@@ -10,4 +10,36 @@
   p {
     color: #aaa;
   }
+  
+  .movie-tile-wrapper {
+    margin: 0 -1rem;
+    display: flex;
+    justify-content: space-evenly;
+  }
+  
+  .movie-tile {
+    margin: 0 1rem;
+    flex-basis: 0;
+    flex-grow: 1;
+  
+    h2 {
+      color: #333;
+      letter-spacing: -1px;
+    }
+  
+    span {
+      color: #bbb;
+      text-transform: uppercase;
+      letter-spacing: 3px;
+    }
+  
+    p {
+      color: #222;
+      line-height: 1.3;
+    }
+  }
+  
+  .movie-tile-img {
+    max-width: 100%;
+  }
 }
