--- a/src/pages/Index.module.scss
+++ b/src/pages/Index.module.scss
@@ -1,15 +1,15 @@
 .Container {
-  max-width: 960px;
+  max-width: 60rem;
   margin: 3rem auto 0;
   font-family: sans-serif;
-}
   
-.Container h1 {
-  color: #333;
-}
+  h1 {
+    color: #333;
+  }
   
-.Container p {
-  color: #aaa;
+  p {
+    color: #aaa;
+  }
 }
   
 .MovieTileWrapper {
